--- a/viridian/barnacles/network-manager/editor/dialog_gtk3.ui
+++ b/viridian/barnacles/network-manager/editor/dialog_gtk3.ui
@@ -12,10 +12,21 @@
     </child>
 
     <child>
-      <object class="GtkFileChooserButton" id="filechooser_certificate">
-        <property name="title">Select Seaside Certificate</property>
-        <property name="action">open</property>
-        <property name="show-hidden">false</property>
+      <object class="GtkBox">
+        <property name="orientation">horizontal</property>
+        <property name="spacing">6</property>
+        <child>
+          <object class="GtkLabel" id="label_selected_certificate">
+            <property name="label">No file selected</property>
+            <property name="hexpand">true</property>
+            <property name="halign">start</property>
+          </object>
+        </child>
+        <child>
+          <object class="GtkButton" id="filechooser_certificate">
+            <property name="label">Choose...</property>
+          </object>
+        </child>
       </object>
     </child>
 
